--- a/home/index.html
+++ b/home/index.html
@@ -11,8 +11,16 @@
   </head>
 
   <body>
-    <img src="pics/opening_logo.svg">
+
+    <title>Home</title>
+
+    <p>
+      The Autism Science Foundation is a nonprofit corporation to support autism
+      research. The foundation increases awareness of autism spectrum disorders,
+      and provides resources for people with autism, families affected by
+      autism, and the general public.
+    </p>
 
   </body>
 
-  </html>
+</html>
