--- a/about/index.html
+++ b/about/index.html
@@ -15,48 +15,29 @@
     <title>About</title>
 
     <p>
-      The Autism Science Foundation is a nonprofit corporation organized for
-      charitable and educational purposes, and exempt from taxation under
-      section 501(c)(3) of the IRS code.
-      <br><br>
       The Autism Science Foundation’s mission is to support autism research by
       providing funding and other assistance to scientists and organizations
       conducting, facilitating, publicizing and disseminating autism research.
-      The organization also provides information about autism to the general
-      public and serves to increase awareness of autism spectrum disorders and
-      the needs of individuals and families affected by autism.
-      <br><br>
-      Our organization adheres to rigorous scientific standards and values.
-      We believe that outstanding research is the greatest gift we can offer
-      our families. Every research dollar needs to count.
-      <br><br>
-      The Autism Science Foundation’s mission is premised on the following facts
-      and principles:
-      <br>
-        <ul>
-          <li>Autism is known to have a strong genetic component. Research must
-              aim to discover the mechanisms of action that trigger autism, as
-              well as safe, effective and novel treatments to enhance the
-              quality of life for children and adults currently affected.</li>
-
-          <li>Early diagnosis and early intervention are critical to helping
-              people with autism reach their potential, but educational,
-              vocational and support services must be applied across the
-              lifespan. Science has a critical role to play in creating
-              evidence-based, effective lifespan interventions.</li>
-
-          <li>Vaccines save lives; they do not cause autism. Numerous studies
-              have failed to show a causal link between vaccines and autism.
-              Vaccine safety research should continue to be conducted by the
-              public health system in order to ensure vaccine safety and
-              maintain confidence in our national vaccine program, but further
-              investment of limited autism research dollars is not warranted at
-              this time.</li>
-        </ul>
-        <br>
-      The Autism Science Foundation is tax exempt under section 501(c)(3) of the
-      Internal Revenue Code. Donations are tax-deductible to the full extent
-      allowed by law.
+      From their research they have concluded that autism has a strong genetic
+      component, early diagnosis and early intervention is critical to help
+      people with autism reach their potential, and vaccines do not cause autism.
+        <br><br>
+      My brother has autism, and they’re not a lot of resources for people with
+      autism or family members of the autistic individual. Raising an autistic
+      child is more complex than a child without autism. They are sensitive to
+      bright colors, loud noises, crowds, types of materials (such as clothing)
+      and as a result this foundation gives resources on how to handle tantrums,
+      outburst, or things they could buy to help them not be sensitive to these
+      things. I also feel like a lot of websites don’t go over people with
+      autism going into adulthood, how the caregivers or siblings feel or 
+      handling an autistic person. There also toolkits for autistic people going
+      to the dentist’s, doctor’s (like getting blood drawn), getting employment,
+      improving social interactions, and a guide for being in a military family.
+        <br><br>
+      People just see autism as a lack of socializing interactions, but they
+      have failed to realize that there’s more than that. Thankfully this
+      foundation addresses this, and provides guidebooks, toolkits, stores, and
+      resources on how to make an autistic person more relaxed and comfortable.
     </p>
 
 
