--- a/index.html
+++ b/index.html
@@ -11,7 +11,151 @@
   </head>
 
   <body>
-    <img src="pics/opening_logo.svg">
+
+    <!-- Image -->
+
+    <?xml version="1.0" encoding="utf-8"?>
+    <!-- Generator: Adobe Illustrator 21.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+    <svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+    	 viewBox="0 0 612 792" style="enable-background:new 0 0 612 792;" xml:space="preserve">
+    <style type="text/css">
+    	.st0{fill:#B4DCBC;}
+    	.st1{fill:none;stroke:#9B9B9F;stroke-width:12;stroke-linecap:round;stroke-miterlimit:10;}
+    	.st2{opacity:0.85;fill:#CC7261;}
+    	.st3{opacity:0.85;fill:#BDC580;}
+    	.st4{opacity:0.85;fill:#B3DCBE;}
+    	.st5{fill:#FFFFFF;}
+    </style>
+    <!--home-->
+    <a href="home/index.html">
+      <g class="text">
+        <circle class="st0" id="homecircle" cx="403.9" cy="193.5" r="106.5"/>
+      	<path class="st5" d="M340.5,169.8h0.4c1.2,0.2,1.8,0.8,1.8,1.6v15.9h19v-15.7c0.2-1.3,0.8-1.9,1.8-1.9h0.3c1.2,0.2,1.8,0.8,1.8,1.8
+      		v34.7c0,0.9-0.6,1.4-1.9,1.7h-0.1c-1.3-0.2-1.9-0.9-1.9-1.9v-14.9h-19v15c0,1-0.6,1.6-1.9,1.8h-0.1c-1,0-1.7-0.7-1.9-2v-34
+      		C339,170.5,339.5,169.8,340.5,169.8z"/>
+      	<path class="st5" d="M383.8,180.8c3.5,0,6.7,1.3,9.5,4c2.7,2.8,4.1,6,4.1,9.6c0,5.1-2.4,9.1-7.2,12c-2.1,1-4.1,1.6-6.1,1.6h-0.8
+      		c-3.6,0-7-1.7-10.2-5.1c-1.9-2.7-2.9-5.5-2.9-8.4c0-4.4,1.9-8.1,5.8-11.1C378.6,181.7,381.1,180.8,383.8,180.8z M374.2,194.1v0.5
+      		c0,3.6,1.8,6.4,5.3,8.4c1.3,0.7,2.6,1,4.1,1h0.6c3.8,0,6.6-1.9,8.6-5.8c0.5-1.2,0.7-2.4,0.7-3.6v-0.5c0-3-1.4-5.6-4.2-7.6
+      		c-1.6-1.1-3.5-1.7-5.5-1.7c-4.1,0-7.1,2.1-9,6.4C374.4,192.3,374.2,193.3,374.2,194.1z"/>
+      	<path class="st5" d="M404.1,181.2c1.2,0.3,1.9,0.9,1.9,1.7v1c2.2-1.8,4.5-2.6,7.1-2.6c3.4,0,6.3,1.6,8.9,4.7c1-1.9,3.2-3.4,6.5-4.4
+      		l2.2-0.3c4.1,0,7.3,2,9.7,5.9c0.8,1.6,1.2,3.2,1.2,4.7v14.6c0,0.9-0.6,1.4-1.9,1.7h-0.1c-1.2-0.2-1.9-0.8-1.9-1.9v-14.2
+      		c0-3.2-1.7-5.4-5.1-6.7l-1.4-0.2h-1c-2.7,0-4.8,1.6-6.2,4.7c-0.2,0.7-0.3,1.3-0.3,1.8V206c-0.2,1.3-0.8,1.9-1.8,1.9h-0.1
+      		c-1.2-0.2-1.9-0.8-1.9-1.8v-12.1c0-3.3-0.5-5.4-1.4-6.3c-1.4-1.9-3.2-2.8-5.5-2.8h-0.3c-3.1,0-5.3,1.7-6.6,5
+      		c-0.2,0.8-0.3,1.8-0.3,3.1v13c0,1-0.6,1.5-1.9,1.8H404c-1,0-1.6-0.6-1.9-1.9v-22.6C402.3,181.9,402.9,181.2,404.1,181.2z"/>
+      	<path class="st5" d="M459.6,180.7c5.3,0,9.4,2.5,12.3,7.5c1,2,1.5,4.1,1.5,6.4v0.5c-0.2,1.3-0.9,2-1.9,2h-21
+      		c0.8,2.6,2.5,4.7,5.1,6.1c1.5,0.6,3,0.9,4.3,0.9c1.5,0,3.3-0.5,5.3-1.5h0.6c1.2,0.2,1.8,0.8,1.8,1.8v0.3c0,1.6-2.4,2.8-7.2,3.4
+      		h-0.7c-4.9,0-8.8-2.3-11.8-6.9c-1.2-2.2-1.8-4.4-1.8-6.8c0-5,2.4-9,7.1-11.9C455.4,181.2,457.5,180.7,459.6,180.7z M450.1,193.1
+      		h19.2c0-1.4-0.8-3.1-2.4-5.3c-2.2-2.1-4.3-3.1-6.5-3.1h-1.1c-3.2,0-5.8,1.6-7.9,4.7C450.7,190.7,450.2,191.9,450.1,193.1z"/>
+      </g>
+    </a>
+    <line class="st1" x1="298.6" y1="271.1" x2="360.7" y2="235.3"/>
+    <!--about-->
+    <a href="about/index.html">
+      <g>
+        <circle class="st2" id="aboutcircle" cx="265.4" cy="299.9" r="106.5"/>
+      	<path class="st5" d="M210.1,279.5c1.1,0,2,1.1,2.5,3.4c7.5,19.4,11.2,29.3,11.3,29.8v0.3c0,0.9-0.6,1.5-1.7,1.7h-0.1
+      		c-1.1,0-1.9-1.1-2.3-3.2l-4.2-10.8h-10.8l-5.1,13.4c-0.5,0.4-0.9,0.6-1.3,0.6h-0.2c-1.2-0.2-1.7-0.8-1.7-1.7v-0.1l3.2-8.5
+      		c5.5-14.3,8.5-22.3,9-23.9C209.1,279.8,209.6,279.5,210.1,279.5z M210.1,286.5l-3.9,10.5h8V297L210.1,286.5L210.1,286.5z"/>
+      	<path class="st5" d="M229.2,279.4h0.3c1.1,0.2,1.7,0.8,1.7,1.6v12.1c2.7-2.6,5.8-3.9,9.1-3.9c3.3,0,6.2,1.2,8.9,3.7
+      		c2.5,2.7,3.8,5.7,3.8,9c0,4.8-2.3,8.5-6.8,11.3c-2,1-3.8,1.5-5.7,1.5h-0.7c-3.4,0-6.6-1.6-9.6-4.8c-1.8-2.4-2.7-5.3-2.7-8.6V281
+      		C227.6,280.2,228.1,279.6,229.2,279.4z M231.2,301.6v0.5c0,3.8,2,6.6,6,8.5c1.1,0.3,2,0.5,2.9,0.5h0.6c3.7,0,6.5-2,8.4-6
+      		c0.3-1.2,0.5-2.1,0.5-2.8v-0.6c0-3.8-2-6.6-6.1-8.5c-1.2-0.3-2.2-0.5-2.9-0.5h-0.4c-3.7,0-6.5,2-8.4,5.9
+      		C231.4,299.8,231.2,300.8,231.2,301.6z"/>
+      	<path class="st5" d="M269.5,289.6c3.2,0,6.2,1.2,8.8,3.7c2.5,2.6,3.7,5.6,3.7,8.9c0,4.7-2.2,8.4-6.7,11.1c-1.9,1-3.8,1.5-5.6,1.5
+      		h-0.7c-3.4,0-6.5-1.6-9.4-4.8c-1.8-2.5-2.7-5.1-2.7-7.8c0-4.1,1.8-7.5,5.4-10.2C264.7,290.4,267.1,289.6,269.5,289.6z M260.7,301.9
+      		v0.4c0,3.3,1.6,5.9,4.9,7.8c1.2,0.6,2.4,0.9,3.7,0.9h0.5c3.5,0,6.1-1.8,8-5.4c0.4-1.1,0.6-2.2,0.6-3.3v-0.4c0-2.8-1.3-5.1-3.8-7
+      		c-1.5-1-3.2-1.6-5.1-1.6c-3.8,0-6.6,2-8.3,5.9C260.8,300.2,260.7,301.1,260.7,301.9z"/>
+      	<path class="st5" d="M288.5,289.4c1.2,0.3,1.7,0.8,1.7,1.6v9.9c0,4.2,1.2,7.1,3.6,8.5c1.5,1.2,3.2,1.7,5.1,1.7
+      		c3.6,0,6.3-1.8,8.1-5.5c0.4-1.2,0.6-2.4,0.6-3.6v-10.7c0.2-1.2,0.9-1.8,1.8-1.8c1.2,0.3,1.7,0.8,1.7,1.7v22c0,0.8-0.6,1.3-1.7,1.6
+      		h-0.1c-1.2-0.2-1.7-0.8-1.7-1.7v-1.7h-0.1c-2.6,2.3-5.3,3.5-8.3,3.5h-0.6c-3.8,0-7.2-1.9-10-5.6c-1.3-2-1.9-4.5-1.9-7.5v-10.1
+      		C286.8,290.1,287.4,289.4,288.5,289.4z"/>
+      	<path class="st5" d="M320.8,280.4h0.3c1.1,0.2,1.6,0.7,1.6,1.5v8.1h3.7l0.8-0.1c0.8,0,1.4,0.6,1.7,1.8c0,0.8-0.5,1.4-1.5,1.8
+      		l-1.4-0.1h-3.3v13.3c0,2.3,0.8,3.7,2.3,4.3l2.1,0.2h1c0.8,0,1.3,0.6,1.5,1.7v0.1c-0.2,1.2-0.8,1.7-1.7,1.7H326
+      		c-2.9,0-5-1.6-6.4-4.7c-0.2-0.8-0.4-1.7-0.4-2.7v-13.8h-1.8l-1.5,0.1c-1-0.4-1.5-1-1.5-1.8c0.2-1.1,0.7-1.7,1.6-1.7v-0.1l0.9,0.1
+      		h2.2v-7.6C319.4,281.1,319.9,280.4,320.8,280.4z"/>
+      </g>
+    </a>
+    <line class="st1" x1="273.5" y1="346.2" x2="400.8" y2="517.2"/>
+    <!--contact-->
+    <a href="contact/index.html">
+      <g>
+        <circle class="st3" id="contactcircle" cx="437.9" cy="539.1" r="106.5"/>
+      	<path class="st5" d="M377.9,523.6c3.1,0,5.9,0.9,8.6,2.8c0.2,0.4,0.3,0.7,0.3,0.9v0.2c0,0.9-0.5,1.4-1.6,1.5h-0.1l-2.7-1.4
+      		c-1.8-0.6-3.3-0.9-4.5-0.9c-3.7,0-6.9,1.7-9.6,5.1c-1.3,2.3-2,4.5-2,6.6c0,4.3,2,7.8,6.1,10.3c1.8,0.9,3.6,1.4,5.4,1.4h0.2
+      		c2.3,0,4.6-0.7,6.9-2.2h0.5c0.9,0.2,1.4,0.7,1.4,1.4v0.2c0,1.1-1.7,2.2-5.2,3.2c-1.1,0.3-2.2,0.5-3.4,0.5h-0.4
+      		c-4.9,0-9-2.3-12.3-6.8c-1.6-2.6-2.3-5.3-2.3-8c0-5.1,2.3-9.3,7-12.5C372.7,524.4,375.3,523.6,377.9,523.6z"/>
+      	<path class="st5" d="M401.3,532.3c2.7,0,5.2,1,7.4,3.1c2.1,2.2,3.1,4.7,3.1,7.4c0,3.9-1.9,7-5.6,9.3c-1.6,0.8-3.2,1.2-4.7,1.2h-0.6
+      		c-2.8,0-5.4-1.3-7.9-4c-1.5-2.1-2.2-4.3-2.2-6.5c0-3.4,1.5-6.3,4.5-8.6C397.2,532.9,399.2,532.3,401.3,532.3z M393.9,542.5v0.4
+      		c0,2.8,1.4,5,4.1,6.5c1,0.5,2,0.8,3.1,0.8h0.5c2.9,0,5.1-1.5,6.7-4.5c0.4-0.9,0.5-1.9,0.5-2.8v-0.4c0-2.3-1.1-4.3-3.2-5.9
+      		c-1.3-0.9-2.7-1.3-4.3-1.3c-3.2,0-5.5,1.7-7,5C394,541.1,393.9,541.9,393.9,542.5z"/>
+      	<path class="st5" d="M417.3,532.2c1,0.2,1.5,0.7,1.5,1.3v1.7c2.2-2,4.7-3,7.3-3c2.9,0,5.5,1.2,7.7,3.6c1.6,2,2.5,4.1,2.5,6.4v9.8
+      		c0,0.7-0.5,1.1-1.5,1.3h-0.1c-1-0.2-1.5-0.7-1.5-1.5v-8.6c0-3.9-1.7-6.4-5-7.6c-0.8-0.2-1.5-0.3-2.2-0.3h-0.2c-2.8,0-5,1.4-6.5,4.3
+      		c-0.4,0.9-0.6,2.3-0.6,4.2v8.1c0,0.8-0.5,1.2-1.5,1.4h-0.1c-0.8,0-1.3-0.5-1.5-1.5v-17.8C415.9,532.7,416.4,532.2,417.3,532.2z"/>
+      	<path class="st5" d="M444.4,524.6h0.3c0.9,0.2,1.4,0.6,1.4,1.2v6.8h3.1l0.7-0.1c0.7,0,1.2,0.5,1.4,1.5c0,0.7-0.4,1.2-1.3,1.5
+      		l-1.1-0.1h-2.8v11.1c0,1.9,0.6,3.1,1.9,3.6l1.7,0.1h0.8c0.7,0,1.1,0.5,1.3,1.4v0.1c-0.2,1-0.6,1.4-1.4,1.4h-1.6
+      		c-2.4,0-4.2-1.3-5.4-3.9c-0.2-0.6-0.3-1.4-0.3-2.3v-11.6h-1.5l-1.2,0.1c-0.9-0.3-1.3-0.8-1.3-1.5c0.2-1,0.6-1.4,1.4-1.4v-0.1
+      		l0.8,0.1h1.9v-6.4C443.2,525.1,443.7,524.6,444.4,524.6z"/>
+      	<path class="st5" d="M464.8,532.2c4,0,7.1,2,9.5,5.9c0.7,1.6,1.1,3.2,1.1,4.9v8.9c0,0.8-0.5,1.2-1.5,1.4h-0.1
+      		c-0.7,0-1.1-0.4-1.5-1.2V552l0.1-1.9V550c-2.3,2.2-4.7,3.2-7.3,3.2h-0.6c-3.6,0-6.6-1.8-8.9-5.4c-0.9-1.7-1.3-3.5-1.3-5.2
+      		c0-3.9,1.9-7,5.8-9.3C461.6,532.5,463.2,532.2,464.8,532.2z M457.2,542.6v0.2c0,3.1,1.5,5.4,4.6,6.9c1,0.4,1.8,0.5,2.6,0.5h0.6
+      		c2.6,0,4.7-1.3,6.3-3.8c0.6-1.2,0.9-2.4,0.9-3.5v-0.3c0-3-1.5-5.2-4.4-6.8c-1-0.5-2.1-0.7-3.2-0.7h-0.1c-3.1,0-5.4,1.6-7,4.8
+      		C457.4,541,457.2,541.9,457.2,542.6z"/>
+      	<path class="st5" d="M489.4,532.1c2.7,0,5.2,1,7.4,3.1c0.2,0.3,0.2,0.5,0.2,0.8v0.1c-0.2,1-0.7,1.5-1.5,1.5h-0.1
+      		c-0.4,0-1.2-0.5-2.5-1.5c-1.1-0.6-2.3-0.9-3.4-0.9h-0.5c-3,0-5.3,1.6-6.8,4.7c-0.4,1.1-0.5,2-0.5,2.9c0,3.1,1.6,5.4,4.7,6.9
+      		c0.9,0.4,2,0.5,3,0.5c1.8,0,3.5-0.7,5.2-2.2l0.6-0.1h0.2c0.8,0,1.2,0.5,1.4,1.5v0.1c0,1.1-1.7,2.2-5,3.5c-1.1,0.2-1.9,0.3-2.5,0.3
+      		H489c-2.8,0-5.5-1.3-7.9-4c-1.5-2.1-2.2-4.3-2.2-6.6c0-3.4,1.5-6.3,4.6-8.7C485.3,532.7,487.3,532.1,489.4,532.1z"/>
+      	<path class="st5" d="M505,524.6h0.3c0.9,0.2,1.4,0.6,1.4,1.2v6.8h3.1l0.7-0.1c0.7,0,1.2,0.5,1.4,1.5c0,0.7-0.4,1.2-1.3,1.5
+      		l-1.1-0.1h-2.8v11.1c0,1.9,0.6,3.1,1.9,3.6l1.7,0.1h0.8c0.7,0,1.1,0.5,1.3,1.4v0.1c-0.2,1-0.6,1.4-1.4,1.4h-1.6
+      		c-2.4,0-4.2-1.3-5.4-3.9c-0.2-0.6-0.3-1.4-0.3-2.3v-11.6h-1.5l-1.2,0.1c-0.9-0.3-1.3-0.8-1.3-1.5c0.2-1,0.6-1.4,1.4-1.4v-0.1
+      		l0.8,0.1h1.9v-6.4C503.8,525.1,504.3,524.6,505,524.6z"/>
+      </g>
+    </a>
+    <line class="st1" x1="234.5" y1="653" x2="392.3" y2="570.8"/>
+    <!--resources-->
+    <a href="resources/index.html">
+      <g>
+        <circle class="st4" id="resourcescircle" cx="224.6" cy="636" r="106.5"/>
+      	<path class="st5" d="M134.3,617.8h6.1c2.6,0,4.7,1.4,6.4,4.1c0.5,1.1,0.8,2.2,0.8,3.3v0.3c0,2.6-1.2,4.6-3.7,6.3l-0.7,0.4
+      		c4.4,7.6,6.6,11.5,6.6,11.7v0.4c0,0.7-0.5,1.2-1.4,1.3h-0.1c-0.7,0-1.4-0.8-2.2-2.5l-6-10.2h-4.2v11.4c0,0.7-0.5,1.2-1.4,1.3h-0.1
+      		c-0.7,0-1.2-0.5-1.4-1.5v-24.6C133.2,618.3,133.6,617.8,134.3,617.8z M135.9,620.6v9.4h4.2c2.3,0,3.8-1.2,4.5-3.7l0.1-0.6v-0.6
+      		c0-1.8-1-3.2-3.1-4.2c-0.6-0.2-1.5-0.3-2.7-0.3H135.9z"/>
+      	<path class="st5" d="M161.6,625.7c3.8,0,6.8,1.8,8.9,5.4c0.7,1.4,1.1,3,1.1,4.6v0.4c-0.2,1-0.6,1.4-1.4,1.4h-15.2
+      		c0.6,1.9,1.8,3.4,3.7,4.4c1.1,0.4,2.1,0.6,3.1,0.6c1.1,0,2.4-0.4,3.8-1.1h0.4c0.9,0.2,1.3,0.6,1.3,1.3v0.2c0,1.2-1.7,2-5.2,2.5
+      		h-0.5c-3.6,0-6.4-1.7-8.5-5c-0.9-1.6-1.3-3.2-1.3-4.9c0-3.6,1.7-6.5,5.1-8.7C158.6,626.1,160.1,625.7,161.6,625.7z M154.7,634.8
+      		h13.9c0-1-0.6-2.3-1.7-3.8c-1.6-1.5-3.2-2.2-4.7-2.2h-0.8c-2.3,0-4.2,1.1-5.7,3.4C155.1,633,154.8,633.9,154.7,634.8z"/>
+      	<path class="st5" d="M182.2,625.9c3.3,0,5.9,1.5,7.8,4.5l0.1,0.6v0.1c0,0.8-0.5,1.2-1.4,1.4c-0.6,0-1.3-0.5-1.9-1.6
+      		c-1.3-1.3-2.8-1.9-4.5-1.9c-2.2,0-3.9,1.1-5.2,3.2l-0.1,0.4c0,0.6,0.7,1,2.1,1.1c5.5,1.3,8.5,2.1,9,2.3c1.4,0.9,2.1,2,2.1,3.4v0.1
+      		c0,2-1.5,3.8-4.4,5.5c-1.2,0.6-2.6,0.9-4,0.9c-2.9,0-5.4-1.4-7.4-4.1c-0.2-0.3-0.3-0.5-0.3-0.8v-0.4c0-0.7,0.5-1.1,1.6-1.2
+      		c0.5,0,1.1,0.6,1.9,1.8c1.3,1.2,2.8,1.8,4.4,1.8c2,0,3.7-1,5-2.9l0.1-0.4v-0.1c0-0.6-0.4-1-1.3-1.1c-6.4-1.4-9.8-2.3-10.2-2.6
+      		c-1.2-0.9-1.8-2-1.8-3.3c0-1.8,1.3-3.5,3.9-5.2C179.4,626.3,180.8,625.9,182.2,625.9z"/>
+      	<path class="st5" d="M202.9,625.9c2.5,0,4.8,1,6.9,2.9c2,2.1,2.9,4.4,2.9,7c0,3.7-1.7,6.6-5.2,8.7c-1.5,0.8-3,1.1-4.4,1.1h-0.6
+      		c-2.6,0-5.1-1.2-7.4-3.7c-1.4-2-2.1-4-2.1-6.1c0-3.2,1.4-5.9,4.2-8C199.1,626.5,201,625.9,202.9,625.9z M195.9,635.5v0.3
+      		c0,2.6,1.3,4.7,3.8,6.1c0.9,0.5,1.9,0.7,2.9,0.7h0.4c2.7,0,4.8-1.4,6.2-4.2c0.3-0.9,0.5-1.8,0.5-2.6v-0.3c0-2.2-1-4-3-5.5
+      		c-1.2-0.8-2.5-1.2-4-1.2c-3,0-5.2,1.6-6.5,4.7C196.1,634.2,195.9,634.9,195.9,635.5z"/>
+      	<path class="st5" d="M217.8,625.7c0.9,0.2,1.4,0.6,1.4,1.2v7.8c0,3.3,0.9,5.5,2.8,6.7c1.2,0.9,2.5,1.4,4,1.4c2.8,0,4.9-1.4,6.4-4.3
+      		c0.3-0.9,0.4-1.9,0.4-2.8v-8.4c0.2-1,0.7-1.4,1.4-1.4c0.9,0.2,1.4,0.7,1.4,1.4v17.2c0,0.6-0.5,1.1-1.4,1.2h-0.1
+      		c-0.9-0.2-1.4-0.6-1.4-1.4v-1.4h-0.1c-2,1.8-4.2,2.7-6.5,2.7h-0.5c-3,0-5.6-1.5-7.8-4.4c-1-1.6-1.5-3.5-1.5-5.9v-7.9
+      		C216.4,626.2,216.9,625.7,217.8,625.7z"/>
+      	<path class="st5" d="M241.3,625.6c0.9,0.2,1.4,0.6,1.4,1.2v1.6c2.1-1.9,4.4-2.8,6.8-2.8c1.3,0,2.7,0.3,4.2,0.9
+      		c0.4,0.4,0.6,0.8,0.6,1.2v0.1c-0.2,0.9-0.6,1.4-1.4,1.4h-0.1c-1.3-0.4-2.3-0.6-3-0.6h-0.4c-2.8,0-4.9,1.5-6.3,4.4
+      		c-0.3,0.8-0.4,1.7-0.4,2.7v8.6c0,0.7-0.5,1.2-1.4,1.3h-0.1c-0.7,0-1.2-0.5-1.4-1.4v-16.8C239.9,626.2,240.4,625.6,241.3,625.6z"/>
+      	<path class="st5" d="M266.4,625.7c2.6,0,4.9,1,7,2.9c0.1,0.3,0.2,0.5,0.2,0.7v0.1c-0.2,0.9-0.6,1.4-1.4,1.4h-0.1
+      		c-0.3,0-1.1-0.5-2.3-1.4c-1.1-0.5-2.1-0.8-3.2-0.8h-0.4c-2.8,0-4.9,1.5-6.4,4.4c-0.3,1-0.5,1.9-0.5,2.7c0,2.9,1.5,5,4.4,6.5
+      		c0.9,0.3,1.8,0.5,2.8,0.5c1.7,0,3.3-0.7,4.9-2l0.6-0.1h0.2c0.7,0,1.1,0.5,1.3,1.4v0.1c0,1-1.5,2.1-4.6,3.3c-1,0.2-1.8,0.3-2.3,0.3
+      		H266c-2.7,0-5.1-1.3-7.4-3.8c-1.4-2-2.1-4-2.1-6.1c0-3.2,1.4-5.9,4.3-8.1C262.5,626.3,264.4,625.7,266.4,625.7z"/>
+      	<path class="st5" d="M286.3,625.7c3.8,0,6.8,1.8,8.9,5.4c0.7,1.4,1.1,3,1.1,4.6v0.4c-0.2,1-0.6,1.4-1.4,1.4h-15.2
+      		c0.6,1.9,1.8,3.4,3.7,4.4c1.1,0.4,2.1,0.6,3.1,0.6c1.1,0,2.4-0.4,3.8-1.1h0.4c0.9,0.2,1.3,0.6,1.3,1.3v0.2c0,1.2-1.7,2-5.2,2.5
+      		h-0.5c-3.6,0-6.4-1.7-8.5-5c-0.9-1.6-1.3-3.2-1.3-4.9c0-3.6,1.7-6.5,5.1-8.7C283.3,626.1,284.8,625.7,286.3,625.7z M279.4,634.8
+      		h13.9c0-1-0.6-2.3-1.7-3.8c-1.6-1.5-3.2-2.2-4.7-2.2h-0.8c-2.3,0-4.2,1.1-5.7,3.4C279.8,633,279.5,633.9,279.4,634.8z"/>
+      	<path class="st5" d="M306.9,625.9c3.3,0,5.9,1.5,7.8,4.5l0.1,0.6v0.1c0,0.8-0.5,1.2-1.4,1.4c-0.6,0-1.3-0.5-1.9-1.6
+      		c-1.3-1.3-2.8-1.9-4.5-1.9c-2.2,0-3.9,1.1-5.2,3.2l-0.1,0.4c0,0.6,0.7,1,2.1,1.1c5.5,1.3,8.5,2.1,9,2.3c1.4,0.9,2.1,2,2.1,3.4v0.1
+      		c0,2-1.5,3.8-4.4,5.5c-1.3,0.6-2.6,0.9-4,0.9c-2.9,0-5.4-1.4-7.4-4.1c-0.2-0.3-0.3-0.5-0.3-0.8v-0.4c0-0.7,0.5-1.1,1.6-1.2
+      		c0.5,0,1.1,0.6,1.9,1.8c1.3,1.2,2.8,1.8,4.4,1.8c2,0,3.7-1,5-2.9l0.1-0.4v-0.1c0-0.6-0.4-1-1.3-1.1c-6.4-1.4-9.8-2.3-10.2-2.6
+      		c-1.2-0.9-1.8-2-1.8-3.3c0-1.8,1.3-3.5,3.9-5.2C304.1,626.3,305.5,625.9,306.9,625.9z"/>
+      </g>
+    </a>
+    </svg>
+
 
   </body>
 
