--- a/resources/index.html
+++ b/resources/index.html
@@ -21,7 +21,7 @@
 <!--Nav Bar-->
 
     <ul>
-     <li><img src="home_icon.svg"></li>     
+     <li><img src="pics/home_icon.svg"></li>     
     </ul>  
 
     
