--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
 
     <!-- Image -->
-
+  <div class="whole_opening">
     <?xml version="1.0" encoding="utf-8"?>
     <!-- Generator: Adobe Illustrator 21.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
     <svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -155,6 +155,8 @@
       </g>
     </a>
     </svg>
+    
+    </div>
 
 
   </body>
