--- a/about/index.html
+++ b/about/index.html
@@ -12,34 +12,51 @@
 
   <body>
 
-    <title>About</title>
+    <!--Title-->
+        <div class="title">
+          <h1>Resources</h1>
+        </div>
 
-    <p>
-      The Autism Science Foundation’s mission is to support autism research by
-      providing funding and other assistance to scientists and organizations
-      conducting, facilitating, publicizing and disseminating autism research.
-      From their research they have concluded that autism has a strong genetic
-      component, early diagnosis and early intervention is critical to help
-      people with autism reach their potential, and vaccines do not cause autism.
-        <br><br>
-      My brother has autism, and they’re not a lot of resources for people with
-      autism or family members of the autistic individual. Raising an autistic
-      child is more complex than a child without autism. They are sensitive to
-      bright colors, loud noises, crowds, types of materials (such as clothing)
-      and as a result this foundation gives resources on how to handle tantrums,
-      outburst, or things they could buy to help them not be sensitive to these
-      things. I also feel like a lot of websites don’t go over people with
-      autism going into adulthood, how the caregivers or siblings feel or 
-      handling an autistic person. There also toolkits for autistic people going
-      to the dentist’s, doctor’s (like getting blood drawn), getting employment,
-      improving social interactions, and a guide for being in a military family.
-        <br><br>
-      People just see autism as a lack of socializing interactions, but they
-      have failed to realize that there’s more than that. Thankfully this
-      foundation addresses this, and provides guidebooks, toolkits, stores, and
-      resources on how to make an autistic person more relaxed and comfortable.
-    </p>
+    <!--Info and Content-->
+        <div class="main">
 
+          <p>
+            The Autism Science Foundation’s mission is to support autism research by
+            providing funding and other assistance to scientists and organizations
+            conducting, facilitating, publicizing and disseminating autism research.
+            From their research they have concluded that autism has a strong genetic
+            component, early diagnosis and early intervention is critical to help
+            people with autism reach their potential, and vaccines do not cause autism.
+              <br><br>
+            My brother has autism, and they’re not a lot of resources for people with
+            autism or family members of the autistic individual. Raising an autistic
+            child is more complex than a child without autism. They are sensitive to
+            bright colors, loud noises, crowds, types of materials (such as clothing)
+            and as a result this foundation gives resources on how to handle tantrums,
+            outburst, or things they could buy to help them not be sensitive to these
+            things. I also feel like a lot of websites don’t go over people with
+            autism going into adulthood, how the caregivers or siblings feel or
+            handling an autistic person. There also toolkits for autistic people going
+            to the dentist’s, doctor’s (like getting blood drawn), getting employment,
+            improving social interactions, and a guide for being in a military family.
+              <br><br>
+            People just see autism as a lack of socializing interactions, but they
+            have failed to realize that there’s more than that. Thankfully this
+            foundation addresses this, and provides guidebooks, toolkits, stores, and
+            resources on how to make an autistic person more relaxed and comfortable.
+          </p>
+
+        </div>
+
+    <!--Nav Bar-->
+        <div class="sidebar">
+          <ul>
+           <li><a href="../home/index.html"><img src="../pics/home_icon.svg"></a></li>
+           <li><a href="../about/index.html"><img src="../pics/about_icon.svg"></a></li>
+           <li><a href="../contact/index.html"><img src="../pics/contact_icon.svg"></a></li>
+           <li><a href="../resources/index.html"><img src="../pics/resources_icon.svg"></a></li>
+          </ul>
+        </div>
 
   </body>
 
