--- a/contact/index.html
+++ b/contact/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Home - The-Autism-Science-Foundation</title>
+    <title>Contact - The-Autism-Science-Foundation</title>
     <!--CSS-->
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -12,37 +12,55 @@
 
   <body>
 
-    <title>Contact</title>
+    <!--Title-->
+        <div class="title">
+          <h1>Contact</h1>
+        </div>
 
-    <form>
-      <label for="name">Name</label>
-      <br>
-      <input id="firstname" type="text" name="name"
-      placeholder="First">
-      <br>
-      <input id="lastname" type="text" name="name"
-      placeholder="Last">
+    <!--Info and Content-->
+        <div class="main">
 
-      <br><br>
-      <label for="email">Email Address</label>
-      <br>
-      <input id="email" type="email" name="email"
-      placeholder="Email Address">
+          <form>
+            <label for="name">Name</label>
+            <br>
+            <input id="firstname" type="text" name="name"
+            placeholder="First">
+            <br>
+            <input id="lastname" type="text" name="name"
+            placeholder="Last">
 
-      <br><br>
-      <label for="Message">Message</label>
-      <br>
-      <textarea name="message" row="10" cols="30">Message</textarea>
-    </form>
+            <br><br>
+            <label for="email">Email Address</label>
+            <br>
+            <input id="email" type="email" name="email"
+            placeholder="Email Address">
 
-      <br><br>
-    <form>
-      <input type="checkbox" name="newsletter" checked> I would like to sign up
-      for the newsletter.
-    </form>
+            <br><br>
+            <label for="Message">Message</label>
+            <br>
+            <textarea name="message" row="10" cols="30">Message</textarea>
+          </form>
 
-    <br><br>
-    <button name="submit"><span>Submit</span></button>
+            <br><br>
+          <form>
+            <input type="checkbox" name="newsletter" checked> I would like to sign up
+            for the newsletter.
+          </form>
+
+          <br><br>
+          <button name="submit"><span>Submit</span></button>
+
+        </div>
+
+    <!--Nav Bar-->
+        <div class="sidebar">
+          <ul>
+           <li><a href="../home/index.html"><img src="../pics/home_icon.svg"></a></li>
+           <li><a href="../about/index.html"><img src="../pics/about_icon.svg"></a></li>
+           <li><a href="../contact/index.html"><img src="../pics/contact_icon.svg"></a></li>
+           <li><a href="../resources/index.html"><img src="../pics/resources_icon.svg"></a></li>
+          </ul>
+        </div>
 
   </body>
 
