--- a/home/index.html
+++ b/home/index.html
@@ -12,14 +12,33 @@
 
   <body>
 
-    <title>Home</title>
 
-    <p>
-      The Autism Science Foundation is a nonprofit corporation to support autism
-      research. The foundation increases awareness of autism spectrum disorders,
-      and provides resources for people with autism, families affected by
-      autism, and the general public.
-    </p>
+    <!--Title-->
+        <div class="title">
+          <h1>Home</h1>
+        </div>
+
+    <!--Info and Content-->
+        <div class="main">
+
+          <p>
+            The Autism Science Foundation is a nonprofit corporation to support autism
+            research. The foundation increases awareness of autism spectrum disorders,
+            and provides resources for people with autism, families affected by
+            autism, and the general public.
+          </p>
+
+        </div>
+
+    <!--Nav Bar-->
+        <div class="sidebar">
+          <ul>
+           <li><a href="../home/index.html"><img src="../pics/home_icon.svg"></a></li>
+           <li><a href="../about/index.html"><img src="../pics/about_icon.svg"></a></li>
+           <li><a href="../contact/index.html"><img src="../pics/contact_icon.svg"></a></li>
+           <li><a href="../resources/index.html"><img src="../pics/resources_icon.svg"></a></li>
+          </ul>
+        </div>
 
   </body>
 
