--- a/resources/index.html
+++ b/resources/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Home - The-Autism-Science-Foundation</title>
+    <title>Resources - The-Autism-Science-Foundation</title>
     <!--CSS-->
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -12,19 +12,30 @@
 
   <body>
 
-    <title>Resources</title>
+<!--Title-->
+    <div class="title">
+      <h1>Resources</h1>
+    </div>
 
-    <p>
-      wow
-    </p>
+<!--Info and Content-->
+    <div class="main">
+
+      <p>
+        wow
+      </p>
+
+    </div>
 
 <!--Nav Bar-->
+    <div class="sidebar">
+      <ul>
+       <li><a href="../home/index.html"><img src="../pics/home_icon.svg"></a></li>
+       <li><a href="../about/index.html"><img src="../pics/about_icon.svg"></a></li>
+       <li><a href="../contact/index.html"><img src="../pics/contact_icon.svg"></a></li>
+       <li><a href="../resources/index.html"><img src="../pics/resources_icon.svg"></a></li>
+      </ul>
+    </div>
 
-    <ul>
-     <li><img src="pics/home_icon.svg"></li>     
-    </ul>  
-
-    
   </body>
 
 </html>
