--- a/about/index.html
+++ b/about/index.html
@@ -58,6 +58,11 @@
           </ul>
         </div>
 
+    <!--Logo -->
+    <div class="logo">
+      <a href="../index.html"><img src="../pics/real_logo.jpg"></a>
+    </div>
+
   </body>
 
   </html>
