--- a/contact/index.html
+++ b/contact/index.html
@@ -61,6 +61,10 @@
            <li><a href="../resources/index.html"><img src="../pics/resources_icon.svg"></a></li>
           </ul>
         </div>
+    <!--Logo -->
+    <div class="logo">
+      <a href="../index.html"><img src="../pics/real_logo.jpg"></a>
+    </div>
 
   </body>
 
