--- a/resources/index.html
+++ b/resources/index.html
@@ -36,6 +36,11 @@
       </ul>
     </div>
 
+<!--Logo -->
+    <div class="logo">
+      <a href="../index.html"><img src="../pics/real_logo.jpg"></a>
+    </div>
+
   </body>
 
 </html>
