--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
 
     <!--Title-->
         <div class="title">
-          <h1>Resources</h1>
+          <h1>About</h1>
         </div>
 
     <!--Info and Content-->
@@ -60,7 +60,7 @@
 
     <!--Logo -->
     <div class="logo">
-      <a href="../index.html"><img src="../pics/real_logo.jpg"></a>
+      <a href="../index.html"><img src="../pics/real_logo.JPG"></a>
     </div>
 
   </body>
