--- a/contact/index.html
+++ b/contact/index.html
@@ -63,7 +63,7 @@
         </div>
     <!--Logo -->
     <div class="logo">
-      <a href="../index.html"><img src="../pics/real_logo.jpg"></a>
+      <a href="../index.html"><img src="../pics/real_logo.JPG"></a>
     </div>
 
   </body>
