--- a/home/index.html
+++ b/home/index.html
@@ -42,7 +42,7 @@
 
     <!--Logo -->
         <div class="logo">
-          <a href="../index.html"><img src="../pics/real_logo.jpg"></a>
+          <a href="../index.html"><img src="../pics/real_logo.JPG"></a>
         </div>
 
   </body>
