--- a/resources/index.html
+++ b/resources/index.html
@@ -38,7 +38,7 @@
 
 <!--Logo -->
     <div class="logo">
-      <a href="../index.html"><img src="../pics/real_logo.jpg"></a>
+      <a href="../index.html"><img src="../pics/real_logo.JPG"></a>
     </div>
 
   </body>
