--- a/about/index.html
+++ b/about/index.html
@@ -46,6 +46,8 @@
             resources on how to make an autistic person more relaxed and comfortable.
           </p>
 
+          <img src="../pics/aboutimage.JPG">
+
         </div>
 
     <!--Nav Bar-->
