--- a/home/index.html
+++ b/home/index.html
@@ -27,7 +27,15 @@
             and provides resources for people with autism, families affected by
             autism, and the general public.
           </p>
+            <br>
 
+          <h2>Statistics</h2>
+
+          <br>
+
+          <div id="graphs">
+            <img src="../pics/graph1.svg"><br><img src="../pics/graph2.svg">
+          </div>
         </div>
 
     <!--Nav Bar-->
