--- a/resources/index.html
+++ b/resources/index.html
@@ -20,9 +20,22 @@
 <!--Info and Content-->
     <div class="main">
 
-      <p>
-        wow
-      </p>
+      <ul>
+        <li>
+          <a href="http://autismsciencefoundation.org/" target=blank>Autism Science Foundation
+          Website</a>
+        </li>
+
+        <li>
+          <a href="http://www.tacanow.org/family-resources/latest-autism-statistics-2/"
+          target=blank>First Graph</a>
+        </li>
+
+        <li>
+          <a href="http://www.healthline.com/health/autism/autism-rates-by-state#1"
+          target=blank>Second Graph</a>
+        </li>
+      </ul>
 
     </div>
 
