--- a/about/index.html
+++ b/about/index.html
@@ -46,7 +46,7 @@
             resources on how to make an autistic person more relaxed and comfortable.
           </p>
 
-          <img src="../pics/aboutimage.JPG">
+          <img src="../pics/aboutimage.jpg">
 
         </div>
 
